update with everything actually done in past

--- a/msig.css
+++ b/msig.css
@@ -241,38 +241,10 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 
 
 /* adding some MSIG stuff */
-.msig-background{background-image: linear-gradient(to bottom right, #0D102C, #31204d)}
-.msig-transparent-background{background-color: transparent;}
-.msig-top-blur{position:fixed;list-style-type:none;backdrop-filter:blur(11px);padding-top:5px;padding-right:15px}
-.msig-left-align{text-align:left!important;padding-left:15px;padding-right:11px;}
-.msig-right-align{text-align:right!important;padding-right:15px;padding-left:11px;}
-.msig-justify{text-align:justify!important}
-.msig-center{text-align:center!important}
-.msig-margin-side{margin-left:16px;margin-right:16px!important}
-.msig-ul-clean{list-style-type:none;text-decoration:none;}
-.msig-ul-clean li{padding:11px 11px}
-.msig-bottom-ul-clean{list-style-type:none}
-.msig-bottom-ul-clean li{padding:5px 5px;border-bottom:1px solid #6540A2}
-.msig-bottom-ul-clean li:last-child,.msig-bottom-ul-clean li:first-child{border-bottom:none}
-.msig-url-clean{text-decoration:none;cursor:pointer}
-.msig-url-clean:hover{color:#38B6FF!important}
-.msig-button-blue{background-color:#4999d8;color:#0D102C}
-.msig-button-blue-hover:hover{background-color:#0086eb!important;color:#0D102C}
-.msig-card{box-shadow:0 2px 5px 0 #6540A2,0 2px 10px 0 rgba(0,0,0,0.16)}
-.msig-card-gold{box-shadow:0 2px 5px 0 #9D6C28,0 2px 10px 0 rgba(0,0,0,0.16)}
 
-.msig-table,.msig-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.msig-table-all{border:1px solid #795548}
-.msig-bordered tr,.msig-table-all tr{border-bottom:1px solid #795548}.msig-striped tbody tr:nth-child(even){background-color:#052E92}
-.msig-table-all tr:nth-child(odd){background-color:#000}.msig-table-all tr:nth-child(even){background-color:#01040d}
-.msig-hoverable tbody tr:hover,.msig-ul.msig-hoverable li:hover{background-color:#009688}.msig-centered tr th,.msig-centered tr td{text-align:center}
-.msig-table td,.msig-table th,.msig-table-all td,.msig-table-all th{padding:8px 8px;display:table-cell;text-align:left;vertical-align:top}
-.msig-table th:first-child,.msig-table td:first-child,.msig-table-all th:first-child,.msig-table-all td:first-child{padding-left:16px}
-.msig-card-4,.msig-hover-shadow:hover{box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)}
-.msig-padding-bottom{padding-bottom:32px}
-.msig-border-bottom{box-shadow:0 5px 5px -5px #4AADD2,0 2px 10px -10px #052E92}}
-.msig-card-blue{box-shadow:0 2px 5px 0 #4AADD2,0 2px 10px 0 #052E92}
-.msig-border-gold{border-color:#BA924B!important}
-.msig-continue{font-size:28px;color:#BA924B!important}
+/* background stuff */
+.msig-background{background-image: linear-gradient(to bottom right, #0D102C, #31204d)}
+.msig-background-purple,.msig-hover-blue:hover{background-image: linear-gradient(to bottom right, #01193f, #6540A2)!important}
 .msig-background-popup-title{background-image: linear-gradient(to bottom right, #01040d, #01193f)}
 .msig-background-popup-tab{background-image: linear-gradient(to bottom right, #01040d, #01193f)}
 .msig-background-popup-text{background-image: linear-gradient(to bottom right, #01040d, #01193f)}
@@ -280,5 +252,99 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 .msig-background-popup-x-button{background-image: linear-gradient(to bottom right, #01040d, #01193f)}
 .msig-background-popup-close-button{background-image: linear-gradient(to bottom right, #01040d, #01193f)}
 .msig-background-tech1{background-image: url("images/background/technology-pattern-png-3.png");background-repeat:no-repeat;background-position:center}
-.msig-background-transparent{background-color: transparent !important}
+/* need to confirm wich one are working fine for transparent background */
+.msig-background-transparent{background-color: transparent!important;}
+.msig-transparent-background{background-color: transparent;}
+/* end */
+.msig-top-blur{position:fixed;list-style-type:none;backdrop-filter:blur(11px);padding-top:5px;padding-right:15px}
+
+/* button stuff */
+.msig-background-popup-x-button{background-image: linear-gradient(to bottom right, #01040d, #01193f)}
+.msig-background-popup-close-button{background-image: linear-gradient(to bottom right, #01040d, #01193f)}
+.msig-button{background-color:transparent; border:none; color:inherit}
+.msig-button-blue{background-color:#4999d8;color:#0D102C}.msig-button-blue-hover:hover{background-color:#0086eb!important;color:#0D102C}
+.msig-button-gold{background-color:#f0c024;color:#0D102C}.msig-button-gold-hover:hover{background-color:#F0CB4C!important;color:#0D102C}
+.msig-button-green{background-color:#4CAF50;color:#0D102C}.msig-button-green-hover:hover{background-color:#009688!important;color:#0D102C}
+.msig-button-member-top{background-color:inherit; color:inherit; border:none;text-decoration:none;}.msig-button-member-top:hover{background-color:inherit;color:inherit;text-decoration:none;}
+.msig-button-member-top-child{background-color:inherit; color:inherit; border:none;text-decoration:none;}.msig-button-member-top-child:hover{background-color:#0D102C;color:inherit;text-decoration:none;}
+.msig-button-member-side{background-color:inherit; color:inherit; border:none;text-decoration:none;}.msig-button-member-side:hover{background-color:#30204C;color:inherit;text-decoration:none;}
+.msig-button-member-side-child{background-color:inherit; color:inherit; border:none;text-decoration:none;}.msig-button-member-side-child:hover{background-color:#0D102C;color:inherit;text-decoration:none;}
+
+/* alignement stuff */
+.msig-left-align{text-align:left!important;padding-left:15px;padding-right:11px;}
+.msig-right-align{text-align:right!important;padding-right:15px;padding-left:11px;}
+.msig-justify{text-align:justify!important}
+.msig-center{text-align:center!important}
+.msig-margin-bottom{margin-bottom:32px}
+.msig-margin-side{margin-left:16px;margin-right:16px!important}
+.msig-margin-side-small{margin-right:3px!important;margin-left:3px!important}
+.msig-margin-end{margin-top:16!important;margin-bottom:16px!important}
+.msig-margin-end-large{margin-top:32!important;margin-bottom:32!important}
+.msig-margin-end-xlarge{margin-top:48!important;margin-bottom:48!important}
+.msig-margin-up-down{margin-top:16px;margin-bottom:36px!important}
+.msig-margin-top-member-menu{margin-top:11px;}
+.msig-margin-down{margin-bottom:16px}
+.msig-padding-bottom{padding-bottom:32px}
+.msig-padding-down{padding-bottom:16px;}
+.msig-padding-top{padding-top:16px;}
+.msig-padding-top-down{padding-top:16px;padding-bottom:16px;}
+.msig-padding-top-title{padding-top:211px;}
+.msig-padding-top-member-menu{padding-top:9px;}
+
+/* link stuff */
+.msig-url-clean{text-decoration:none;cursor:pointer}.msig-url-clean:hover{color:#38B6FF!important}
+.msig-url-gold{text-decoration:none;color:#F0CB4C!important}.msig-url-gold:hover{color:#BA924B!important}
+
+/* form stuff */
+.msig-input{padding:8px;display:block;border:1px solid #795548;width:100%;background-color: transparent;color:#c0c0c0; margin:0 auto}
+.msig-input-dropdown{padding:8px;display:block;border:1px solid #795548;width:100%;background-color: #0D102C;color:#c0c0c0; margin:0 auto}
+
+/* list stuff */
+.msig-ul-clean{list-style-type:none;text-decoration:none;}
+.msig-ul-clean li{padding:11px 11px}
+.msig-bottom-ul-clean{list-style-type:none}
+.msig-bottom-ul-clean li{padding:5px 5px;border-bottom:1px solid #6540A2}
+.msig-bottom-ul-clean li:last-child,.msig-bottom-ul-clean li:first-child{border-bottom:none}
+.msig-dropdown-click,.msig-dropdown-hover {position: relative;display: inline-block;cursor: pointer}
+.msig-dropdown-click:hover .msig-dropdown-content {display: block;position: fixed;min-width: 160px;margin: 10;padding: 0px;overflow: visible !important}
+.msig-dropdown-content{cursor:auto;background-color:#30204C;display:none;position:absolute;min-width:160px;margin:0;padding:0;z-index:1;}
+.msig-dropdown-hover:first-child,.msig-dropdown-click:hover{background-color:#30204C}  
+.msig-dropdown-hover:hover > .msig-dropdown-click:hover >{background-color:#30204C}
+
+/* table stuff */
+.msig-table,.msig-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.msig-table-all{border:1px solid #795548}
+.msig-table td,.msig-table th,.msig-table-all td,.msig-table-all th{padding:8px 8px;display:table-cell;text-align:left;vertical-align:top}
+.msig-table th:first-child,.msig-table td:first-child,.msig-table-all th:first-child,.msig-table-all td:first-child{padding-left:16px}
+.msig-table-all tr:nth-child(odd){background-color:#000}.msig-table-all tr:nth-child(even){background-color:#01040d}
+.msig-bordered tr,.msig-table-all tr{border-bottom:1px solid #795548}.msig-striped tbody tr:nth-child(even){background-color:#052E92}
+.msig-hoverable tbody tr:hover,.msig-ul.msig-hoverable li:hover{background-color:#009688}.msig-centered tr th,.msig-centered tr td{text-align:center}
+
+/* section stuff */
+.msig-border{border:1px solid #f0c024!important}
+.msig-border-bottom{box-shadow:0 5px 5px -5px #4AADD2,0 2px 10px -10px #052E92}
+.msig-border-left{border-left:1px solid #795548!important}
+.msig-border-gold{border-color:#BA924B!important}
+.msig-card{box-shadow:0 2px 5px 0 #6540A2,0 2px 10px 0 rgba(0,0,0,0.16)}
+.msig-card-4,.msig-hover-shadow:hover{box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)}
+.msig-card-blue{box-shadow:0 2px 5px 0 #4AADD2,0 2px 10px 0 #052E92}
+.msig-card-gold{box-shadow:0 2px 5px 0 #9D6C28,0 2px 10px 0 rgba(0,0,0,0.16)}
+.msig-card-warning{box-shadow:0 2px 5px 0 red,0 2px 10px 0 rgb(241, 169, 169); color:red}
+.msig-modal{z-index:3;display:none;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgba(0,0,0,0.4)}
+.msig-modal-content{margin:auto;background-image: linear-gradient(to bottom right, #0D102C, #31204d);background-attachment: fixed;position:relative;padding:0;outline:0;width:75%; height:auto}
+.msig-sidebar{height:100%;width:200px;position:fixed!important;z-index:1;overflow:auto}
+.msig-hr{border:0;border-top:1px solid #f0c024;margin:20px auto;width:90%;box-shadow: 0px 2px 4px #aaa}
+
+/* font stuff */
+.msig-h1{font-size:36px}.msig-h2{font-size:30px}.msig-h3{font-size:24px}.msig-h4{font-size:20px}.msig-h5{font-size:18px}.msig-h6{font-size:16px}
+.msig-h1,.msig-h2,.msig-h3,.msig-h4,.msig-h5,.msig-h6{font-family:"Nanum Gothic",serif;font-weight:400;margin:10px 0;text-transform:capitalize;text-shadow: 4px 4px 6px #0D102C}
+.msig-green,.msig-hover-green:hover{color:#0D102C!important;background-color:#4CAF50!important}
+.msig-green:hover{color:#0D102C!important;background-color:#d2be0e!important}
+.msig-red,.msig-hover-red:hover{color:#fff!important;background-color:#f44336!important}
+.msig-gold,.msig-hover-gold:hover{color:#fff!important;background-color:#9D6C28!important}
+.msig-font-black{color:#000!important}
+.msig-transparent{background-color: transparent!important; color:#CCCABD}
+.msig-transparent:hover{background-color: #009688!important}
+.msig-active{color:#0D102C!important;background-color:#4CAF50!important}
+.msig-continue{font-size:28px;color:#BA924B!important}
+.msig-select-white{padding:9px 0;width:100%;border:none;border-bottom:1px solid #fff}
 .msig-bottom-copyright{font-size:11px;font-family: "Nanum Gothic", serif}
