--- a/msig.css
+++ b/msig.css
@@ -289,7 +289,7 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 .msig-padding-top-down{padding-top:16px;padding-bottom:16px;}
 .msig-padding-top-title{padding-top:211px;}
 .msig-padding-top-member-menu{padding-top:9px;}
-.msig-col-center{float:center;width:100%}
+.msig-col-center{float:none;width:100%}
 .msig-col-center.s1{width:8.33333%}.msig-col-center.s2{width:16.66666%}.msig-col-center.s3{width:24.99999%}.msig-col-center.s4{width:33.33333%}
 .msig-col-center.s5{width:41.66666%}.msig-col-center.s6{width:49.99999%}.msig-col-center.s7{width:58.33333%}.msig-col-center.s8{width:66.66666%}
 .msig-col-center.s9{width:74.99999%}.msig-col-center.s10{width:83.33333%}.msig-col-center.s11{width:91.66666%}.msig-col-center.s12{width:99.99999%}
