--- a/msig.css
+++ b/msig.css
@@ -289,13 +289,7 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 .msig-padding-top-down{padding-top:16px;padding-bottom:16px;}
 .msig-padding-top-title{padding-top:211px;}
 .msig-padding-top-member-menu{padding-top:9px;}
-.msig-col-center{float:none;width:100%}
-.msig-col-center.s1{width:8.33333%}.msig-col-center.s2{width:16.66666%}.msig-col-center.s3{width:24.99999%}.msig-col-center.s4{width:33.33333%}
-.msig-col-center.s5{width:41.66666%}.msig-col-center.s6{width:49.99999%}.msig-col-center.s7{width:58.33333%}.msig-col-center.s8{width:66.66666%}
-.msig-col-center.s9{width:74.99999%}.msig-col-center.s10{width:83.33333%}.msig-col-center.s11{width:91.66666%}.msig-col-center.s12{width:99.99999%}
-.msig-col-center.w3-third {
-    width: 33.33333%;
-}
+
 /* LINK */
 .msig-url-clean{text-decoration:none;cursor:pointer}.msig-url-clean:hover{color:#38B6FF!important}
 .msig-url-gold{text-decoration:none;color:#F0CB4C!important}.msig-url-gold:hover{color:#BA924B!important}
@@ -357,3 +351,7 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 .msig-bottom-copyright{font-size:11px;font-family: "Nanum Gothic", serif}
 /* need to add this line for the font bottom copyright
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum Gothic|Old Standard TT|Suez One|IM Fell English SC"> */
+.msig-code,.msig-codespan{font-family:Consolas,"courier new";font-size:16px}
+.msig-code{width:auto;background-color:#0D102C;padding:8px 12px;border-left:4px solid #4CAF50;word-wrap:break-word}
+.msig-codespan{color:crimson;background-color:#0D102C;padding-left:4px;padding-right:4px;font-size:110%}
+.msig-code{margin-top:16px!important;margin-bottom:16px!important}
