--- a/msig.css
+++ b/msig.css
@@ -355,3 +355,4 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 .msig-code{width:auto;background-color:#0D102C;padding:8px 12px;border-left:4px solid #4CAF50;word-wrap:break-word}
 .msig-codespan{color:crimson;background-color:#0D102C;padding-left:4px;padding-right:4px;font-size:110%}
 .msig-code{margin-top:16px!important;margin-bottom:16px!important}
+/* end */
