--- a/msig.css
+++ b/msig.css
@@ -272,8 +272,7 @@ html,body{height:100%;margin:0;background-image: linear-gradient(to bottom right
 .msig-button-member-side{background-color:inherit; color:inherit; border:none;text-decoration:none;}.msig-button-member-side:hover{background-color:#30204C;color:inherit;text-decoration:none;}
 .msig-button-member-side-child{background-color:inherit; color:inherit; border:none;text-decoration:none;}.msig-button-member-side-child:hover{background-color:#0D102C;color:inherit;text-decoration:none;}
 /* NEW */
-.msig-button-2{background-color: #f0c024; border: 2px solid #9e65fa; border-radius: 11px;
-color: #0D102C; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 1.1rem; margin: 2px 2px; transition-duration: 0.4s; cursor: pointer; margin-top: 20px;}
+.msig-button-2{background-color: #f0c024; border: 2px solid #9e65fa; border-radius: 11px; color: #0D102C; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 1.1rem; margin: 2px 2px; transition-duration: 0.4s; cursor: pointer; margin-top: 20px;}
 .msig-button-login {color: #0D102C;}
 .msig-button-login:hover {background-color: #F0CB4C;}
 .msig-button-register {opacity: 0.6; cursor: not-allowed;}
